Added foundation for game, espnow, and peripherals.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -75,6 +75,8 @@
     "iterator": "cpp",
     "memory_resource": "cpp",
     "utility": "cpp",
-    "stop_token": "cpp"
+    "stop_token": "cpp",
+    "__tree": "cpp",
+    "map": "cpp"
   }
 }
