Added photoresistor calibration and readings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,8 @@
     "utility": "cpp",
     "stop_token": "cpp",
     "__tree": "cpp",
-    "map": "cpp"
+    "map": "cpp",
+    "iostream": "cpp",
+    "__memory": "cpp"
   }
 }
